# Shiny-CppClient

./: CMakeLists.txt  README.md  test.cpp
src/: shiny-cppclient.cpp  shiny-cppclient.h  shiny-message.cpp  shiny-message.h  shiny-version.h.in
